# etl-tutorial

./: .gitignore  README.md  pyproject.toml
src/etl_tutorial/defs/: assets.py  resources.py
