[project]
name = "etl_tutorial"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.8",
    "dagster-dbt>=0.27.8",
    "dagster-duckdb>=0.27.8",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl_tutorial"
registry_modules = [
    "etl_tutorial.components.*",
]


